spacing fix

--- a/style.css
+++ b/style.css
@@ -99,9 +99,8 @@ header h2 {
     max-width: 100%;
 }
 #container .inner article img {
-    width: 49%;
-    max-width: 49%;
-    padding-right: 10px;
+    width: 48%;
+    max-width: 48%;
 }
 
 #downloads {
